Fix shadow not showing on larger screens on widgets

--- a/frontend/src/styles/common/create-survey/widget.css
+++ b/frontend/src/styles/common/create-survey/widget.css
@@ -5,6 +5,7 @@
   grid-template-columns: auto auto auto;
   box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
+  margin: 12px;
 }
 
 .widget-container:hover {
@@ -40,10 +41,4 @@
   font-size: 16px;
   color: #333333;
   width: 105px;
-}
-
-@media screen and (max-width: 1750px) {
-  .widget-container {
-    margin: 12px;
-  }
 }
